--- a/main.html
+++ b/main.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
   <body>
+	  <h3 id="url">https://localhost:8080/</h3>
+	<form>
+		<input id="name" type="text" name="name"/>
+		<input id="year" name="year" type="number"/>
+		<button id="btn">submit</button>
+	</form>
+	  
     <script type="text/javascript" src="./script.js">
 </script>
   </body>
